修改nodemon配置
